# html-compare-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml  publish.yml
src/: lib.rs
